--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "karma-systemjs",
   "main": "lib/index.js",
   "dependencies": {
+    "karma-coverage": "^0.5.5",
+    "remap-istanbul": "^0.6.3",
     "systemjs-builder": "^0.15.15"
   }
 }
