update to builder master

--- a/package.json
+++ b/package.json
@@ -5,6 +5,6 @@
   "dependencies": {
     "karma-coverage": "^0.5.5",
     "remap-istanbul": "^0.6.3",
-    "systemjs-builder": "^0.15.15"
+    "systemjs-builder": "github:systemjs/builder#master"
   }
 }
